feat: Done vip level js

--- a/pages/auction.html
+++ b/pages/auction.html
@@ -66,7 +66,7 @@
             <label for="exampleFormControlInput1" class="form-label">銀行名稱<span class="text-danger">*</span></label>
             <div class="input-group has-validation" data-bs-toggle="offcanvas" data-bs-target="#offcanvasBottom"
               aria-controls="offcanvasBottom">
-              <input type="text" class="form-control is-invalid" id="inputQutionType" placeholder="請選擇銀行名稱"
+              <input type="text" class="form-control  rounded-3" id="inputQutionType" placeholder="請選擇銀行名稱"
                 aria-describedby="inputGroupPrepend3 validationServerPasswordFeedback2" required>
               <img class="d-block" src="../assets/img/arrow-right.svg" alt=""
                 style="position: absolute;right: 8px;top: 15px;z-index: 9;">
@@ -371,7 +371,7 @@
         </div>
         <div class="modal-footer">
           <div class="w-100 d-grid gap-2">
-            <button onclick="showToast ('success', '已送出拍賣!', 'liveToast')"
+            <button onclick="showToast ('success', '已送出!', 'liveToast')"
               class="btn btn-primary btn-lin fs-6">確認</button>
           </div>
         </div>
