perf: detail page style

--- a/pages/game_record_detail.html
+++ b/pages/game_record_detail.html
@@ -26,46 +26,50 @@
       <div class="card-body">
         <form>
           <div class="row px-0 mx-1">
-            <label for="staticEmail" class="col-4 px-2 col-form-label fs-7 text-muted">遊戲名稱</label>
+            <label for="staticEmail" class="col-4 px-2 col-form-label fs-7 text-gray62">遊戲名稱</label>
             <div class="col-8">
-              <input type="text" disabled class="text-end form-control-plaintext fs-7" id="staticEmail" value="古怪猴子">
+              <input type="text" disabled class="text-end form-control-plaintext text-gray2e fs-7" id="staticEmail"
+                value="古怪猴子">
             </div>
           </div>
 
           <div class="row border-bottom border-light px-0 mx-1">
-            <label for="staticEmail" class="col-4 px-2 col-form-label fs-7 text-muted">投注選項</label>
+            <label for="staticEmail" class="col-4 px-2 col-form-label fs-7 text-gray62">投注選項</label>
             <div class="col-8">
-              <input type="text" disabled class="text-end form-control-plaintext fs-7" id="staticEmail" value="選項">
+              <input type="text" disabled class="text-end form-control-plaintext text-gray2e fs-7" id="staticEmail"
+                value="選項">
             </div>
           </div>
 
           <div class="row border-bottom border-light px-0 mx-1">
-            <label for="staticEmail" class="col-4 px-2 col-form-label fs-7 text-muted">投注金額</label>
+            <label for="staticEmail" class="col-4 px-2 col-form-label fs-7 text-gray62">投注金額</label>
             <div class="col-8">
-              <input type="text" disabled class="text-end form-control-plaintext fs-7" id="staticEmail" value="100">
+              <input type="text" disabled class="text-end form-control-plaintext text-gray2e fs-7" id="staticEmail"
+                value="100">
             </div>
           </div>
 
           <div class="row border-bottom border-light px-0 mx-1">
-            <label for="staticEmail" class="col-4 px-2 col-form-label fs-7 text-muted">投注時間</label>
+            <label for="staticEmail" class="col-4 px-2 col-form-label fs-7 text-gray62">投注時間</label>
             <div class="col-8">
-              <input type="text" disabled class="text-end form-control-plaintext fs-7" id="staticEmail"
+              <input type="text" disabled class="text-end form-control-plaintext text-gray2e fs-7" id="staticEmail"
                 value="2022-03-29 18:33:24">
             </div>
           </div>
 
           <div class="row border-bottom border-light px-0 mx-1">
-            <label for="staticEmail" class="col-4 text-nowrap px-2 col-form-label fs-7 text-muted">有效投注</label>
+            <label for="staticEmail" class="col-4 text-nowrap px-2 col-form-label fs-7 text-gray62">有效投注</label>
             <div class="col-8">
-              <input type="text" disabled class="text-end form-control-plaintext fs-7" id="staticEmail" value="1,000">
+              <input type="text" disabled class="text-end form-control-plaintext text-gray2e fs-7" id="staticEmail"
+                value="1,000">
             </div>
           </div>
 
           <div class="row border-bottom border-light px-0 mx-1">
-            <label for="staticEmail" class="col-4 px-2 col-form-label fs-7 text-muted">結果</label>
+            <label for="staticEmail" class="col-4 px-2 col-form-label fs-7 text-gray62">結果</label>
             <div class="col-8">
-              <input type="number" disabled class="text-end form-control-plaintext text-danger fs-7" id="staticEmail"
-                value="-90">
+              <input type="number" disabled class="text-end form-control-plaintext text-gray2e text-danger fs-7"
+                id="staticEmail" value="-90">
             </div>
           </div>
 
