--- a/pages/auction.html
+++ b/pages/auction.html
@@ -8,7 +8,7 @@
 
   <!-- CSS -->
   <link href="../assets/css/all.css" rel="stylesheet" type="text/css">
-  <title>WEBO - 拍賣</title>
+  <title>WEBO - 提款</title>
 </head>
 
 <body>
