--- a/pages/auction_detail.html
+++ b/pages/auction_detail.html
@@ -8,77 +8,81 @@
 
   <!-- CSS -->
   <link href="../assets/css/all.css" rel="stylesheet" type="text/css">
-  <title>WEBO - 拍賣記錄明細</title>
+  <title>WEBO - 提款記錄明細</title>
 </head>
 
 <body>
   <!-- title -->
-  <div class="title d-flex container-fluid bg-dark text-white">
-    <a class="col-4 d-block text-white text-decoration-none" href="auction_history.html"><img class="rotateY"
-        src="../assets/img/arrow_right_white.svg" alt="arrow_right_white"></a>
-    <div class="col-4 text-nowrap">
-      <h2 class="fs-5 mb-0 text-center">拍賣記錄明細</h2>
-    </div>
-  </div><!-- title end -->
-  <div class="container">
+  <div class="d-flex container-fluid justify-content-center text-black bg-white custom-header">
+    <a class="back-icon" href="auction.html"><img src="../assets/img/arrow_right_gray.svg" alt="arrow_right_white"></a>
+    <h2 class="fs-6 mb-0 text-center">
+      提款記錄明細
+    </h2>
+  </div>
+  <!-- title end -->
+  <div class="container mt-2">
     <!-- 資訊 -->
-    <div class="card bg-secondary w-100 mb-2" style="width: 18rem;">
+    <div class="card w-100 mb-2" style="width: 18rem;">
       <div class="card-body">
         <form>
-          <div class="row border-bottom border-gray px-0 mx-1">
-            <label for="staticEmail" class="col-4 px-2 col-form-label fs-7 text-muted">狀態</label>
+          <div class="row border-bottom border-light px-0 mx-1">
+            <label for="staticEmail" class="col-4 px-2 col-form-label fs-7 text-gray62">狀態</label>
             <div class="col-8">
-              <input type="text" readonly class="form-control-plaintext text-success fs-7" id="staticEmail" value="成功">
+              <input type="text" readonly class="form-control-plaintext text-gray2e text-success fs-7" id="staticEmail"
+                value="成功">
             </div>
           </div>
-          <div class="row border-bottom border-gray px-0 mx-1">
-            <label for="staticEmail" class="col-4 px-2 col-form-label fs-7 text-muted">訂單編號</label>
+          <div class="row border-bottom border-light px-0 mx-1">
+            <label for="staticEmail" class="col-4 px-2 col-form-label fs-7 text-gray62">訂單編號</label>
             <div class="col-8 position-relative">
-              <input type="text" readonly class="form-control-plaintext fs-7" id="staticEmail" value="6741648550004386">
+              <input type="text" readonly class="form-control-plaintext text-gray2e fs-7" id="staticEmail"
+                value="6741648550004386">
               <a class="edit fs-7" href="name_edit.html">複製</a>
             </div>
           </div>
-          <div class="row border-bottom border-gray px-0 mx-1">
-            <label for="staticEmail" class="col-4 px-2 col-form-label fs-7 text-muted">交易帳號</label>
+          <div class="row border-bottom border-light px-0 mx-1">
+            <label for="staticEmail" class="col-4 px-2 col-form-label fs-7 text-gray62">交易帳號</label>
             <div class="col-8">
-              <input type="text" readonly class="form-control-plaintext fs-7" id="staticEmail" value="- -">
+              <input type="text" readonly class="form-control-plaintext text-gray2e fs-7" id="staticEmail" value="- -">
             </div>
           </div>
-          <div class="row border-bottom border-gray px-0 mx-1">
-            <label for="staticEmail" class="col-4 px-2 col-form-label fs-7 text-muted">建立時間</label>
+          <div class="row border-bottom border-light px-0 mx-1">
+            <label for="staticEmail" class="col-4 px-2 col-form-label fs-7 text-gray62">建立時間</label>
             <div class="col-8">
-              <input type="text" readonly class="form-control-plaintext fs-7" id="staticEmail"
+              <input type="text" readonly class="form-control-plaintext text-gray2e fs-7" id="staticEmail"
                 value="2022-03-29 18:33:24">
             </div>
           </div>
-          <div class="row border-bottom border-gray px-0 mx-1">
-            <label for="staticEmail" class="col-4 px-2 col-form-label fs-7 text-muted">拍賣點數</label>
+          <div class="row border-bottom border-light px-0 mx-1">
+            <label for="staticEmail" class="col-4 px-2 col-form-label fs-7 text-gray62">拍賣點數</label>
             <div class="col-8">
-              <input type="text" readonly class="form-control-plaintext fs-7" id="staticEmail" value="1,000">
+              <input type="text" readonly class="form-control-plaintext text-gray2e fs-7" id="staticEmail"
+                value="1,000">
             </div>
           </div>
-          <div class="row border-bottom border-gray px-0 mx-1">
-            <label for="staticEmail" class="col-4 text-nowrap px-2 col-form-label fs-7 text-muted">實際USDT數量</label>
+          <div class="row border-bottom border-light px-0 mx-1">
+            <label for="staticEmail" class="col-4 text-nowrap px-2 col-form-label fs-7 text-gray62">實際USDT數量</label>
             <div class="col-8">
-              <input type="text" readonly class="form-control-plaintext fs-7" id="staticEmail" value="1,000">
+              <input type="text" readonly class="form-control-plaintext text-gray2e fs-7" id="staticEmail"
+                value="1,000">
             </div>
           </div>
-          <div class="row border-bottom border-gray px-0 mx-1">
-            <label for="staticEmail" class="col-4 px-2 col-form-label fs-7 text-muted">手續費</label>
+          <div class="row border-bottom border-light px-0 mx-1">
+            <label for="staticEmail" class="col-4 px-2 col-form-label fs-7 text-gray62">手續費</label>
             <div class="col-8">
-              <input type="number" readonly class="form-control-plaintext fs-7" id="staticEmail" value="0">
+              <input type="number" readonly class="form-control-plaintext text-gray2e fs-7" id="staticEmail" value="0">
             </div>
           </div>
-          <div class="row border-bottom border-gray px-0 mx-1">
-            <label for="staticEmail" class="col-4 px-2 col-form-label fs-7 text-muted">拍賣方式</label>
+          <div class="row border-bottom border-light px-0 mx-1">
+            <label for="staticEmail" class="col-4 px-2 col-form-label fs-7 text-gray62">拍賣方式</label>
             <div class="col-8">
-              <input type="text" readonly class="form-control-plaintext fs-7" id="staticEmail" value="超商儲值">
+              <input type="text" readonly class="form-control-plaintext text-gray2e fs-7" id="staticEmail" value="超商儲值">
             </div>
           </div>
           <div class="row px-0 mx-1">
-            <label for="staticEmail" class="col-4 px-2 col-form-label fs-7 text-muted">備註</label>
+            <label for="staticEmail" class="col-4 px-2 col-form-label fs-7 text-gray62">備註</label>
             <div class="col-8">
-              <input type="text" readonly class="form-control-plaintext fs-7" id="staticEmail" value="- -">
+              <input type="text" readonly class="form-control-plaintext text-gray2e fs-7" id="staticEmail" value="- -">
             </div>
           </div>
         </form>
