--- a/pages/game_record_history.html
+++ b/pages/game_record_history.html
@@ -26,13 +26,14 @@
       <div class="col-auto collapseBtn">
         <button class="accordion-button collapsed text-info btn-sm fs-7 rounded-2" type="button"
           data-bs-toggle="collapse" data-bs-target="#collapseService" aria-expanded="true"
-          aria-controls="collapseService">
+          aria-controls="collapseService" id="plateform-filter">
           所有平台
         </button>
       </div>
       <div class="col-auto collapseBtn">
         <button class="accordion-button collapsed text-info btn-sm fs-7 rounded-2" type="button"
-          data-bs-toggle="collapse" data-bs-target="#collapseTime" aria-expanded="false" aria-controls="collapseTime">
+          data-bs-toggle="collapse" data-bs-target="#collapseTime" aria-expanded="false" aria-controls="collapseTime"
+          id="time-filter-btn">
           今日
         </button>
       </div>
@@ -47,42 +48,42 @@
     <!-- 平台選擇 -->
     <div class="collapse my-2 mt-0" id="collapseService" data-bs-parent="#accordion">
       <div class="d-flex flex-column px-2" role="group" aria-label="Basic radio toggle button group">
-        <div>
+        <div class="plateform-option">
           <input type="radio" class="btn-check" name="btnradio" id="btnradio_1" autocomplete="off" checked>
           <label class="radio-icon-check d-flex justify-content-between align-items-center py-2" for="btnradio_1">
             <div class="text-gray2e fs-7">所有平台</div>
             <div class="py-auto"><img src="../assets/img/checked.svg" alt="checked"></div>
           </label>
         </div>
-        <div>
+        <div class="plateform-option">
           <input type="radio" class="btn-check" name="btnradio" id="btnradio_2" autocomplete="off">
           <label class="radio-icon-check d-flex justify-content-between align-items-center py-2" for="btnradio_2">
             <div class="text-gray2e fs-7">真人娛樂</div>
             <div class="py-auto"><img src="../assets/img/checked.svg" alt="checked"></div>
           </label>
         </div>
-        <div>
+        <div class="plateform-option">
           <input type="radio" class="btn-check" name="btnradio" id="btnradio_3" autocomplete="off">
           <label class="radio-icon-check d-flex justify-content-between align-items-center py-2" for="btnradio_3">
             <div class="text-gray2e fs-7">棋牌遊戲</div>
             <div class="py-auto"><img src="../assets/img/checked.svg" alt="checked"></div>
           </label>
         </div>
-        <div>
+        <div class="plateform-option">
           <input type="radio" class="btn-check" name="btnradio" id="btnradio_4" autocomplete="off">
           <label class="radio-icon-check d-flex justify-content-between align-items-center py-2" for="btnradio_4">
             <div class="text-gray2e fs-7">電競</div>
             <div class="py-auto"><img src="../assets/img/checked.svg" alt="checked"></div>
           </label>
         </div>
-        <div>
+        <div class="plateform-option">
           <input type="radio" class="btn-check" name="btnradio" id="btnradio_5" autocomplete="off">
           <label class="radio-icon-check d-flex justify-content-between align-items-center py-2" for="btnradio_5">
             <div class="text-gray2e fs-7">彩票投注</div>
             <div class="py-auto"><img src="../assets/img/checked.svg" alt="checked"></div>
           </label>
         </div>
-        <div>
+        <div class="plateform-option">
           <input type="radio" class="btn-check" name="btnradio" id="btnradio_6" autocomplete="off">
           <label class="radio-icon-check d-flex justify-content-between align-items-center py-2" for="btnradio_6">
             <div class="text-gray2e fs-7">電子遊藝</div>
@@ -255,6 +256,34 @@
   <div class="mb-2"></div>
 
   <script src="../bootstrap5/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+
+  <!-- 日期選擇 -->
+  <script>
+    const timeBtns = document.querySelectorAll('.time-filter-btns .btn-gray')
+    const timeFilterBtn = document.getElementById('time-filter-btn')
+    timeBtns.forEach((el) => {
+      el.addEventListener('click', function (e) {
+        timeBtns.forEach(el => el.classList.remove('active'))
+        el.classList.add('active')
+        timeFilterBtn.innerText = el.innerText
+
+      })
+    })
+  </script>
+
+  <!-- 平台選擇 -->
+  <script>
+    const plateFromOptions = document.querySelectorAll('.plateform-option')
+    const plateFormBtn = document.getElementById('plateform-filter')
+    console.log(plateFromOptions);
+    plateFromOptions.forEach(el => {
+      el.addEventListener('click', function (e) {
+        e.stopPropagation();
+        plateFormBtn.innerText = el.innerText
+      })
+    })
+
+  </script>
 </body>
 
 </html>
