perf: valid input style & feedback page

--- a/pages/feedback.html
+++ b/pages/feedback.html
@@ -49,7 +49,7 @@
             <label for="exampleFormControlInput1" class="form-label">問題類型<span class="text-danger"></span></label>
             <div class="input-group has-validation" data-bs-toggle="offcanvas" data-bs-target="#offcanvasBottom"
               aria-controls="offcanvasBottom">
-              <input type="text" class="form-control is-invalid" id="inputQutionType" placeholder="請選擇問題類型"
+              <input type="text" class="form-control rounded-3 is-invalid" id="inputQutionType" placeholder="請選擇問題類型"
                 aria-describedby="inputGroupPrepend3 validationServerPasswordFeedback2" required>
               <img class="d-block" src="../assets/img/arrow-right.svg" alt=""
                 style="position: absolute;right: 8px;top: 15px;z-index: 9;">
@@ -60,7 +60,7 @@
           <div class="mb-3">
             <label for="exampleFormControlInput1" class="form-label">問題描述<span class="text-danger"></span></label>
             <div class="input-group has-validation position-relative">
-              <textarea rows="5" type="text" class="form-control is-invalid" id="textAreaI"
+              <textarea rows="5" type="text" class="form-control rounded-3 " id="textAreaI"
                 placeholder="請詳細描述您遇到的問題，或者想與我們反饋的意見，填寫內容不少於20字"
                 aria-describedby="inputGroupPrepend3 validationServerPasswordFeedback2" required></textarea>
               <span class="pull-right label label-default position-absolute"
