--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
           aria-labelledby="v-pills-tab-1">
           <div class="products-inner">
             <div class="mb-2 overflow-hidden rounded-3">
-              <img class="w-100" src="/assets/img/product_banner.PNG" alt="">
+              <img class="w-100" src="./assets/img/product_banner.PNG" alt="">
             </div>
           </div>
         </div>
@@ -254,10 +254,10 @@
           aria-labelledby="v-pills-tab-2">
           <div class="products-inner">
             <div class="mb-2 overflow-hidden rounded-3">
-              <img class="w-100" src="/assets/img/product_banner.PNG" alt="">
+              <img class="w-100" src="./assets/img/product_banner.PNG" alt="">
             </div>
             <div class="mb-2 overflow-hidden rounded-3">
-              <img class="w-100" src="/assets/img/product_banner.PNG" alt="">
+              <img class="w-100" src="./assets/img/product_banner.PNG" alt="">
             </div>
           </div>
         </div>
@@ -265,13 +265,13 @@
           aria-labelledby="v-pills-tab-3">
           <div class="products-inner">
             <div class="mb-2 overflow-hidden rounded-3">
-              <img class="w-100" src="/assets/img/product_banner.PNG" alt="">
+              <img class="w-100" src="./assets/img/product_banner.PNG" alt="">
             </div>
             <div class="mb-2 overflow-hidden rounded-3">
-              <img class="w-100" src="/assets/img/product_banner.PNG" alt="">
+              <img class="w-100" src="./assets/img/product_banner.PNG" alt="">
             </div>
             <div class="mb-2 overflow-hidden rounded-3">
-              <img class="w-100" src="/assets/img/product_banner.PNG" alt="">
+              <img class="w-100" src="./assets/img/product_banner.PNG" alt="">
             </div>
           </div>
         </div>
@@ -279,16 +279,16 @@
           aria-labelledby="v-pills-tab-4">
           <div class="products-inner">
             <div class="mb-2 overflow-hidden rounded-3">
-              <img class="w-100" src="/assets/img/product_banner.PNG" alt="">
+              <img class="w-100" src="./assets/img/product_banner.PNG" alt="">
             </div>
             <div class="mb-2 overflow-hidden rounded-3">
-              <img class="w-100" src="/assets/img/product_banner.PNG" alt="">
+              <img class="w-100" src="./assets/img/product_banner.PNG" alt="">
             </div>
             <div class="mb-2 overflow-hidden rounded-3">
-              <img class="w-100" src="/assets/img/product_banner.PNG" alt="">
+              <img class="w-100" src="./assets/img/product_banner.PNG" alt="">
             </div>
             <div class="mb-2 overflow-hidden rounded-3">
-              <img class="w-100" src="/assets/img/product_banner.PNG" alt="">
+              <img class="w-100" src="./assets/img/product_banner.PNG" alt="">
             </div>
           </div>
         </div>
@@ -296,16 +296,16 @@
           aria-labelledby="v-pills-tab-5">
           <div class="products-inner">
             <div class="mb-2 overflow-hidden rounded-3">
-              <img class="w-100" src="/assets/img/product_banner.PNG" alt="">
+              <img class="w-100" src="./assets/img/product_banner.PNG" alt="">
             </div>
             <div class="mb-2 overflow-hidden rounded-3">
-              <img class="w-100" src="/assets/img/product_banner.PNG" alt="">
+              <img class="w-100" src="./assets/img/product_banner.PNG" alt="">
             </div>
             <div class="mb-2 overflow-hidden rounded-3">
-              <img class="w-100" src="/assets/img/product_banner.PNG" alt="">
+              <img class="w-100" src="./assets/img/product_banner.PNG" alt="">
             </div>
             <div class="mb-2 overflow-hidden rounded-3">
-              <img class="w-100" src="/assets/img/product_banner.PNG" alt="">
+              <img class="w-100" src="./assets/img/product_banner.PNG" alt="">
             </div>
           </div>
         </div>
@@ -313,7 +313,7 @@
           aria-labelledby="v-pills-tab-6">
           <div class="products-inner">
             <div class="mb-2 overflow-hidden rounded-3">
-              <img class="w-100" src="/assets/img/product_banner.PNG" alt="">
+              <img class="w-100" src="./assets/img/product_banner.PNG" alt="">
             </div>
           </div>
         </div>
@@ -329,7 +329,7 @@
       <div class="d-flex">
         <div class="toast-body d-flex flex-row align-items-center">
           <div class="rounded-circle info-circle d-flex align-items-center justify-content-center"><img
-              src="/assets/img/info.svg" alt=""></div>
+              src="./assets/img/info.svg" alt=""></div>
           <div class="msg ms-2 fw-bold">更換成功</div>
         </div>
         <button type="button" class="btn-close me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
@@ -339,7 +339,7 @@
       <div class="d-flex">
         <div class="toast-body d-flex flex-row align-items-center">
           <div class="rounded-circle info-circle d-flex align-items-center justify-content-center"><img
-              src="/assets/img/info.svg" alt=""></div>
+              src="./assets/img/info.svg" alt=""></div>
           <div class="msg ms-2 fw-bold">更換失敗</div>
         </div>
         <button type="button" class="btn-close me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
@@ -349,7 +349,7 @@
       <div class="d-flex">
         <div class="toast-body d-flex flex-row align-items-center">
           <div class="rounded-circle info-circle d-flex align-items-center justify-content-center"><img
-              src="/assets/img/info.svg" alt=""></div>
+              src="./assets/img/info.svg" alt=""></div>
           <div class="msg ms-2 fw-bold">更換失敗</div>
         </div>
         <button type="button" class="btn-close me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
@@ -364,27 +364,27 @@
       <div class="navbar-nav w-100 justify-content-between">
         <a class="nav-link px-2 py-1 text-decoration-none d-block d-flex flex-column justify-content-center align-items-center active"
           aria-current="page" href="#">
-          <img src="/assets/img/home_icon_white.svg" alt="home_icon">
+          <img src="./assets/img/home_icon_white.svg" alt="home_icon">
           <span>首頁</span>
         </a>
         <a class="nav-link px-2 py-1 text-decoration-none d-block d-flex flex-column justify-content-center align-items-center"
           href="/pages/promotions.html">
-          <img src="/assets/img/present_icon.svg" alt="present_icon">
+          <img src="./assets/img/present_icon.svg" alt="present_icon">
           <span>優惠</span>
         </a>
         <a class="nav-link px-2 py-1 text-decoration-none d-block d-flex flex-column justify-content-center align-items-center"
           href="/pages/contact.html">
-          <img src="/assets/img/help_icon.svg" alt="help_icon">
+          <img src="./assets/img/help_icon.svg" alt="help_icon">
           <span>客服</span>
         </a>
         <a class="nav-link px-2 py-1 text-decoration-none d-block d-flex flex-column justify-content-center align-items-center"
           href="/pages/add_value.html">
-          <img src="/assets/img/icon-recharge.svg" alt="help_icon">
+          <img src="./assets/img/icon-recharge.svg" alt="help_icon">
           <span>儲值</span>
         </a>
         <a class="nav-link px-2 py-1 text-decoration-none d-block d-flex flex-column justify-content-center align-items-center"
           href="/pages/account.html">
-          <img src="/assets/img/member-center-icon.svg" alt="account_icon">
+          <img src="./assets/img/member-center-icon.svg" alt="account_icon">
           <span>會員</span>
         </a>
       </div>
@@ -420,8 +420,8 @@
               </div>
               <!-- img 錯誤加上 is-invalid 無錯誤移除 is-invalid-->
               <div class="checkEye is-invalid" onclick="showPassword('signUp_inputPassword')">
-                <img class="eyeOpen signUp_inputPassword" src="/assets/img/eye_show.svg" alt="eye_open">
-                <img class="eyeClose signUp_inputPassword d-none" src="/assets/img/eye_hide.svg" alt="eye_close">
+                <img class="eyeOpen signUp_inputPassword" src="./assets/img/eye_show.svg" alt="eye_open">
+                <img class="eyeClose signUp_inputPassword d-none" src="./assets/img/eye_hide.svg" alt="eye_close">
               </div>
             </div>
             <div class="col-12 position-relative">
@@ -433,8 +433,8 @@
               </div>
               <!-- 錯誤加上 is-invalid 無錯誤移除 is-invalid-->
               <div class="checkEye" onclick="showPassword('signUp_inputPassword_check')">
-                <img class="eyeOpen signUp_inputPassword_check" src="/assets/img/eye_show.svg" alt="eye_open">
-                <img class="eyeClose signUp_inputPassword_check d-none" src="/assets/img/eye_hide.svg" alt="eye_close">
+                <img class="eyeOpen signUp_inputPassword_check" src="./assets/img/eye_show.svg" alt="eye_open">
+                <img class="eyeClose signUp_inputPassword_check d-none" src="./assets/img/eye_hide.svg" alt="eye_close">
               </div>
             </div>
             <div class="col-12">
@@ -515,8 +515,8 @@
               </div>
               <!-- 錯誤加上 is-invalid 無錯誤移除 is-invalid-->
               <div class="checkEye is-invalid" onclick="showPassword('login_inputPassword')">
-                <img class="eyeOpen login_inputPassword" src="/assets/img/eye_show.svg" alt="eye_open">
-                <img class="eyeClose login_inputPassword d-none" src="/assets/img/eye_hide.svg" alt="eye_close">
+                <img class="eyeOpen login_inputPassword" src="./assets/img/eye_show.svg" alt="eye_open">
+                <img class="eyeClose login_inputPassword d-none" src="./assets/img/eye_hide.svg" alt="eye_close">
               </div>
             </div>
             <div class="col-12 position-relative">
@@ -657,8 +657,8 @@
               </div>
               <!-- 錯誤加上 is-invalid 無錯誤移除 is-invalid-->
               <div class="checkEye " onclick="showPassword('newPassword')">
-                <img class="eyeOpen newPassword" src="/assets/img/eye_show.svg" alt="eye_open">
-                <img class="eyeClose newPassword d-none" src="/assets/img/eye_hide.svg" alt="eye_close">
+                <img class="eyeOpen newPassword" src="./assets/img/eye_show.svg" alt="eye_open">
+                <img class="eyeClose newPassword d-none" src="./assets/img/eye_hide.svg" alt="eye_close">
               </div>
             </div>
             <div class="col-12 position-relative">
@@ -670,8 +670,8 @@
               </div>
               <!-- 錯誤加上 is-invalid 無錯誤移除 is-invalid-->
               <div class="checkEye is-invalid" onclick="showPassword('newPassword_check')">
-                <img class="eyeOpen newPassword_check" src="/assets/img/eye_show.svg" alt="eye_open">
-                <img class="eyeClose newPassword_check d-none" src="/assets/img/eye_hide.svg" alt="eye_close">
+                <img class="eyeOpen newPassword_check" src="./assets/img/eye_show.svg" alt="eye_open">
+                <img class="eyeClose newPassword_check d-none" src="./assets/img/eye_hide.svg" alt="eye_close">
               </div>
             </div>
           </form>
@@ -782,11 +782,11 @@
     <div class="offcanvas-header pt-1 flex-column justify-content-center align-items-center">
       <div class="d-flex flex-row align-items-center mb-3">
         <h5 class="offcanvas-title fs-6 me-2" id="offcanvasBottomLabel">遊戲聽餘額</h5>
-        <img src="/assets/img/renew.svg" alt="renew">
+        <img src="./assets/img/renew.svg" alt="renew">
       </div>
       <div class="d-flex flex-row justify-content-between w-100">
         <div class="form-check form-switch">
-          <img class="ms-1" src="/assets/img/question-circle-fill.svg" alt="" data-bs-toggle="tooltip"
+          <img class="ms-1" src="./assets/img/question-circle-fill.svg" alt="" data-bs-toggle="tooltip"
             data-bs-placement="bottom" title="開啟自動轉點時，系統將會自動把點數全部幫您轉進遊戲平台內">
           <label class="form-check-label align-middle fs-7" for="flexSwitchCheckDefault">自動轉點</label>
           <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
@@ -803,7 +803,7 @@
         <button type="button"
           class="position-relative btn btn-gray d-flex flex-column justify-content-center align-items-center rounded-3 p-2"
           data-bs-toggle="modal" data-bs-target="#api_modal">
-          <img class="btn_active_teal position-absolute start-0 top-0" src="/assets/img/btn_active_teal.svg" alt="">
+          <img class="btn_active_teal position-absolute start-0 top-0" src="./assets/img/btn_active_teal.svg" alt="">
           <div>00.00</div>
           <div class="text-muted">API名稱</div>
         </button>
@@ -812,7 +812,7 @@
         <button type="button"
           class="position-relative btn btn-gray d-flex flex-column justify-content-center align-items-center rounded-3 p-2"
           data-bs-toggle="modal" data-bs-target="#api_modal">
-          <img class="btn_active_teal position-absolute start-0 top-0" src="/assets/img/btn_active_teal.svg" alt="">
+          <img class="btn_active_teal position-absolute start-0 top-0" src="./assets/img/btn_active_teal.svg" alt="">
           <div>00.00</div>
           <div class="text-muted">API名稱</div>
         </button>
@@ -821,7 +821,7 @@
         <button type="button"
           class="position-relative btn btn-gray d-flex flex-column justify-content-center align-items-center rounded-3 p-2"
           data-bs-toggle="modal" data-bs-target="#api_modal">
-          <img class="btn_active_teal position-absolute start-0 top-0" src="/assets/img/btn_active_teal.svg" alt="">
+          <img class="btn_active_teal position-absolute start-0 top-0" src="./assets/img/btn_active_teal.svg" alt="">
           <div>00.00</div>
           <div class="text-muted">API名稱</div>
         </button>
@@ -830,7 +830,7 @@
         <button type="button"
           class="position-relative btn btn-gray d-flex flex-column justify-content-center align-items-center rounded-3 p-2"
           data-bs-toggle="modal" data-bs-target="#api_modal">
-          <img class="btn_active_teal position-absolute start-0 top-0" src="/assets/img/btn_active_teal.svg" alt="">
+          <img class="btn_active_teal position-absolute start-0 top-0" src="./assets/img/btn_active_teal.svg" alt="">
           <div>00.00</div>
           <div class="text-muted">API名稱</div>
         </button>
