chore: index bs5 path

--- a/index.html
+++ b/index.html
@@ -865,7 +865,7 @@
   </div>
 
   <script src="./js/popover.js" crossorigin="anonymous"></script>
-  <script src="/bootstrap5/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+  <script src="./bootstrap5/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
   <script>
     //#region bs5tooltips
     var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
