--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
       </div>
       <div class="marquee-info w-100 d-flex flex-row align-items-center me-1 fs-8">
         <div>★ test marquee 111111 test marquee 11111 ★</div>
-        <div>2. 測試</div>
-        <div>3. 測試</div>
-        <div>4. 測試</div>
-        <div>5. 測試</div>
+        <div>2. 222222</div>
+        <div>3. 333</div>
+        <div>4. 44444444</div>
+        <div>5. 5555555555555555555555555555</div>
       </div>
       <div class="btn-group">
         <button class="btn btn-primary btn-sm dropdown-toggle rounded-pill" type="button" data-bs-toggle="modal"
-          data-bs-target="#info_detail">更多</button>
+          data-bs-target="#info_marquee">更多</button>
       </div>
     </div>
     <!-- 跑馬燈 end-->
@@ -119,6 +119,7 @@
       </div>
     </div>
   </div>
+  <!-- webo 比較 end -->
 
   <!-- 比較 list -->
   <div class="compare-list mb-3 mt-1 text-center">
@@ -165,7 +166,7 @@
   </div>
   <!-- QA end -->
 
-  <!-- 登入後資訊 目前隱藏 TODO:hide-->
+  <!-- 登入後資訊  -->
   <div class="mb-2 py-2">
     <div class="container">
       <div class="d-flex py-1 justify-content-between align-items-center">
@@ -204,9 +205,10 @@
         </div>
       </div>
     </div>
-  </div><!-- 登入後資訊 end-->
+  </div>
+  <!-- 登入後資訊 end-->
 
-  <!-- 產品列表 TODO:hide-->
+  <!-- 產品列表 -->
   <div style="margin-bottom: 56px;" class="container">
     <div class="d-flex align-items-start">
       <div class="nav flex-column nav-pills me-3" id="v-pills-tab" role="tablist" aria-orientation="vertical">
@@ -221,9 +223,9 @@
           aria-controls="v-pills-2" aria-selected="false">
         </button>
         <button
-          class="home-nav-btn btn-electron nav-link tab-btn btn mb-2 rounded-2 py-2 px-2 d-flex flex-row nowarp align-items-center"
-          id="v-pills-tab-3" data-bs-toggle="pill" data-bs-target="#v-pills-3" type="button" role="tab"
-          aria-controls="v-pills-3" aria-selected="false">
+          class="home-nav-btn btn-chess nav-link tab-btn btn mb-2 rounded-2 py-2 px-2 d-flex flex-row nowarp align-items-center"
+          id="v-pills-tab-5" data-bs-toggle="pill" data-bs-target="#v-pills-3" type="button" role="tab"
+          aria-controls="v-pills-4" aria-selected="false">
         </button>
         <button
           class="home-nav-btn btn-lottery nav-link tab-btn btn mb-2 rounded-2 py-2 px-2 d-flex flex-row nowarp align-items-center"
@@ -231,9 +233,9 @@
           aria-controls="v-pills-4" aria-selected="false">
         </button>
         <button
-          class="home-nav-btn btn-chess nav-link tab-btn btn mb-2 rounded-2 py-2 px-2 d-flex flex-row nowarp align-items-center"
-          id="v-pills-tab-5" data-bs-toggle="pill" data-bs-target="#v-pills-5" type="button" role="tab"
-          aria-controls="v-pills-4" aria-selected="false">
+          class="home-nav-btn btn-electron nav-link tab-btn btn mb-2 rounded-2 py-2 px-2 d-flex flex-row nowarp align-items-center"
+          id="v-pills-tab-3" data-bs-toggle="pill" data-bs-target="#v-pills-5" type="button" role="tab"
+          aria-controls="v-pills-3" aria-selected="false">
         </button>
         <button
           class="home-nav-btn btn-game nav-link tab-btn btn mb-2 rounded-2 py-2 px-2 d-flex flex-row nowarp align-items-center"
@@ -246,7 +248,10 @@
           aria-labelledby="v-pills-tab-1">
           <div class="products-inner">
             <div class="mb-2 overflow-hidden rounded-3">
-              <img class="w-100" src="./assets/img/product_banner.PNG" alt="">
+              <img class="w-100" src="./assets/img/product-sport-1.png" alt="">
+            </div>
+            <div class="mb-2 overflow-hidden rounded-3">
+              <img class="w-100" src="./assets/img/product-sport-2.png" alt="">
             </div>
           </div>
         </div>
@@ -254,24 +259,37 @@
           aria-labelledby="v-pills-tab-2">
           <div class="products-inner">
             <div class="mb-2 overflow-hidden rounded-3">
-              <img class="w-100" src="./assets/img/product_banner.PNG" alt="">
+              <img class="w-100" src="./assets/img/product-real-1.png" alt="">
             </div>
             <div class="mb-2 overflow-hidden rounded-3">
-              <img class="w-100" src="./assets/img/product_banner.PNG" alt="">
+              <img class="w-100" src="./assets/img/product-real-2.png" alt="">
             </div>
+            <div class="mb-2 overflow-hidden rounded-3">
+              <img class="w-100" src="./assets/img/product-real-3.png" alt="">
+            </div>
+            <div class="mb-2 overflow-hidden rounded-3">
+              <img class="w-100" src="./assets/img/product-real-4.png" alt="">
+            </div>
+            <div class="mb-2 overflow-hidden rounded-3">
+              <img class="w-100" src="./assets/img/product-real-5.png" alt="">
+            </div>
+            <div class="mb-2 overflow-hidden rounded-3">
+              <img class="w-100" src="./assets/img/product-real-6.png" alt="">
+            </div>
+            <div class="mb-2 overflow-hidden rounded-3">
+              <img class="w-100" src="./assets/img/product-real-7.png" alt="">
+            </div>
+
           </div>
         </div>
         <div class="tab-pane fade overflow-auto products" id="v-pills-3" role="tabpanel"
           aria-labelledby="v-pills-tab-3">
           <div class="products-inner">
             <div class="mb-2 overflow-hidden rounded-3">
-              <img class="w-100" src="./assets/img/product_banner.PNG" alt="">
+              <img class="w-100" src="./assets/img/product-chess-1.png" alt="">
             </div>
             <div class="mb-2 overflow-hidden rounded-3">
-              <img class="w-100" src="./assets/img/product_banner.PNG" alt="">
-            </div>
-            <div class="mb-2 overflow-hidden rounded-3">
-              <img class="w-100" src="./assets/img/product_banner.PNG" alt="">
+              <img class="w-100" src="./assets/img/product-chess-2.png" alt="">
             </div>
           </div>
         </div>
@@ -279,16 +297,13 @@
           aria-labelledby="v-pills-tab-4">
           <div class="products-inner">
             <div class="mb-2 overflow-hidden rounded-3">
-              <img class="w-100" src="./assets/img/product_banner.PNG" alt="">
+              <img class="w-100" src="./assets/img/product-lottery-1.png" alt="">
             </div>
             <div class="mb-2 overflow-hidden rounded-3">
-              <img class="w-100" src="./assets/img/product_banner.PNG" alt="">
+              <img class="w-100" src="./assets/img/product-lottery-2.png" alt="">
             </div>
             <div class="mb-2 overflow-hidden rounded-3">
-              <img class="w-100" src="./assets/img/product_banner.PNG" alt="">
-            </div>
-            <div class="mb-2 overflow-hidden rounded-3">
-              <img class="w-100" src="./assets/img/product_banner.PNG" alt="">
+              <img class="w-100" src="./assets/img/product-lottery-3.png" alt="">
             </div>
           </div>
         </div>
@@ -296,16 +311,13 @@
           aria-labelledby="v-pills-tab-5">
           <div class="products-inner">
             <div class="mb-2 overflow-hidden rounded-3">
-              <img class="w-100" src="./assets/img/product_banner.PNG" alt="">
+              <img class="w-100" src="./assets/img/product-game-1.png" alt="">
             </div>
             <div class="mb-2 overflow-hidden rounded-3">
-              <img class="w-100" src="./assets/img/product_banner.PNG" alt="">
+              <img class="w-100" src="./assets/img/product-game-2.png" alt="">
             </div>
             <div class="mb-2 overflow-hidden rounded-3">
-              <img class="w-100" src="./assets/img/product_banner.PNG" alt="">
-            </div>
-            <div class="mb-2 overflow-hidden rounded-3">
-              <img class="w-100" src="./assets/img/product_banner.PNG" alt="">
+              <img class="w-100" src="./assets/img/product-game-3.png" alt="">
             </div>
           </div>
         </div>
@@ -313,7 +325,7 @@
           aria-labelledby="v-pills-tab-6">
           <div class="products-inner">
             <div class="mb-2 overflow-hidden rounded-3">
-              <img class="w-100" src="./assets/img/product_banner.PNG" alt="">
+              <img class="w-100" src="./assets/img/product-game-3.png" alt="">
             </div>
           </div>
         </div>
@@ -699,7 +711,7 @@
 
 
   <!-- 跑馬燈詳細 modal -->
-  <div class="modal fade" id="info_detail" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+  <div class="modal fade" id="info_marquee" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
     aria-labelledby="staticBackdropLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
       <div class="modal-content">
